welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: unclosed character literal
	return 'Fizz Buzz'
                         ^fizzBuzz:5: error: unclosed character literal
	return 'Fizz'
                    ^fizzBuzz:7: error: unclosed character literal
	return 'Buzz'
                    ^